2006-10-31  Werner Koch  <wk@g10code.com>

	Released 1.0.0.

2006-10-20  Werner Koch  <wk@g10code.com>

	* Makefile.am (stowinstall): New convenience target.

2006-10-10  Werner Koch  <wk@g10code.com>

	Released 0.9.3.

	* tests/Makefile.am (LDADD): Add NETLIBS.

	* configure.ac: Check for cmsghdr.
	(USE_DESCRIPTOR_PASSING): Define it then.

2006-10-09  Werner Koch  <wk@g10code.com>

	* m4/gnupg-pth.m4: New.  Taked from GnuPG.

2006-10-04  Werner Koch  <wk@g10code.com>

	Released 0.9.2.
	
2006-10-04  Werner Koch  <wk@g10code.com>

	Released 0.9.1.
	
	* configure.ac (AB_INIT): New.

	* m4/autobuild.m4: New.

2006-09-19  Werner Koch  <wk@g10code.com>

	* tests/fdpassing.c: Reverted Marcus changes.
	(client): New arg FNAME to replace hardwired file name.
	(main): Pass motd to client.
	* tests/Makefile.am (AM_CPPFLAGS): Removed.
	(EXTRA_DIST): Add motd.

2006-09-19  Marcus Brinkmann  <marcus@g10code.de>

	* tests/fdpassing.c (MOTD): New macro.
	* tests/Makefile.am (AM_CPPFLAGS): New variable.
	* tests/motd: New file.

2006-09-14  Werner Koch  <wk@g10code.com>

	Released 0.9.0.

	* configure.ac: Check for S_PEERCRED.  Include check for socklen_t.
	* m4/sys_socket_h.m4, m4/onceonly.m4, m4/socklen.m4: New.
	* m4/Makefile.am: New.

2006-09-05  Werner Koch  <wk@g10code.com>

	* configure.ac (AH_BOTTOM): Define _ASSUAN_IN_LIBASSUAN.

2005-10-24  Werner Koch  <wk@g10code.com>

	* COPYING.LESSER: Added.
	* README.CVS: Renamed to ..
	* README.SVN: .. this.

2005-10-08  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Check for socket library and add it to
	LIBASSUAN_CONFIG_LIBS if necessary.

2005-10-07  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Invoke AC_CANONICAL_HOST.  Define _XOPEN_SOURCE,
	_XOPEN_SOURCE_EXTENDED and __EXTENSIONS__ on Solaris.
	Add stpcy as replacement function.
	Add setenv as replacement function (and check for unistd.h).

2005-06-20  Werner Koch  <wk@g10code.com>

	Released 0.6.10.

2004-12-22  Werner Koch  <wk@g10code.com>
