@@ -53,7 +53,7 @@ AC_DEFUN([GNUPG_PTH_VERSION_CHECK],
          _gnupg_pth_save_libs=$LIBS
          CFLAGS="$CFLAGS `$PTH_CONFIG --cflags`"
          LDFLAGS="$LDFLAGS `$PTH_CONFIG --ldflags`"
-         LIBS="$LIBS `$PTH_CONFIG --libs`"
+         LIBS="$LIBS `$PTH_CONFIG --libs --all`"
          AC_LINK_IFELSE([AC_LANG_PROGRAM([#include <pth.h>
                                          ],
                                          [[ pth_init ();]])],
