@@ -1,3 +1,15 @@
+2006-11-21  Werner Koch  <wk@g10code.com>
+
+	* configure.ac (AH_BOTTOM): Define PTH_SYSCALL_SOFT to 0.
+	(AC_INIT): Use the SVN magic.
+
+	* m4/gnupg-pth.m4 (GNUPG_PTH_VERSION_CHECK): Use --all with
+	pth-config.
+
+2006-11-15  Werner Koch  <wk@g10code.com>
+
+	* autogen.sh: Add convenience option --build-amd64.
+
 2006-10-31  Werner Koch  <wk@g10code.com>
 
 	Released 1.0.0.
